# Market-Margins

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
Terminal/: Program.cs
Terminal/Components/: App.razor  _Imports.razor
Terminal/Components/Layout/: NavMenu.razor
Terminal/Components/Pages/: Home.razor
Terminal/Properties/: launchSettings.json
Terminal/Services/: UDPService.cs
client/: CMakeLists.txt  sdkconfig  sdkconfig.old
client/main/: CMakeLists.txt  fin-client.cpp  fin-display.cpp  fin-eth.cpp  fin-lib.h  fin-logic.cpp  fin-main.cpp  fin-storage.cpp
desk-client/src/: desk-defines.h  desk-main.cpp  desk-platform.cpp  desk-platform.h
esp32-client/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32-client/main/: CMakeLists.txt  esp-button.cpp  esp-client.cpp  esp-device-interface.cpp  esp-display.cpp  esp-eth.cpp  esp-lib.h  esp-logic.cpp  esp-main.cpp  esp-storage.cpp  esp-wifi.cpp  fin-button.cpp  fin-client.cpp  fin-esp32-device-interface.cpp  fin-lib.h  fin-logic.cpp  fin-main.cpp  fin-wifi.cpp
market/src/: fin-api.h  fin-backtest.cpp  fin-binaryblob.h  fin-log.h  fin-main.cpp  fin-orderbook-tests.cpp  fin-orderbook.cpp  fin-orderbook.h  fin-pch.cpp  fin-pch.h  fin-platform.cpp  fin-platform.h  fin-priority-queue-tests.cpp  fin-priority-queue.h  fin-replay.cpp  fin-replay.h  fin-rpc.h  fin-spsc-queue.h
shared/: fin-api.h  fin-client.cpp  fin-client.h  fin-queues.h  fin-spsc-queue.h
terminal/: build_and_run.bat  go.mod
terminal/site/: index.html  script.js  style.css
terminal/src/: ter-main.go
